# Rust_offensive_security

./: .gitmodules  README.md
Crawler/: Cargo.toml
Crawler/src/: error.rs  main.rs
Crawler/src/spiders/: github.rs  quotes.rs
crawler/: README.md
crawler/src/: crawler.rs
crawler/src/spiders/: cvedetails.rs
crusty_scanner/: Cargo.toml  README.md
crusty_scanner/src/: error.rs  main.rs  ports.rs  subdomains.rs
sha1_cracker/: Cargo.toml  README.md  hash_test.json
sha1_cracker/src/: main.rs
