[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
fantoccini = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
select = "0.6.0-alpha.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
url = "2.2"
clap = "2.33"
anyhow = "1.0"
env_logger = "0.9"

