[package]
name = "crusty_scanner"
version = "0.1.0"
authors = ["Fatoke Ademola (Crustydev)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
trust-dns-resolver = "0.20"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"]}
tokio = { version= "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
