[package]
name = "sha1_cracker"
version = "0.1.0"
authors = ["Fatoke Ademola (Crustydev)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.9"
hex = "0.4"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
